objects/Interviewer_Feedback__c.object
<CustomObject><fields>
        <fullName>Additional_Feedback__c</fullName>
        <label>Additional Feedback</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>Creativity__c</fullName>
        <label>Creativity</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Personality_Fit__c</fullName>
        <label>Personality Fit</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Professionalism__c</fullName>
        <label>Professionalism</label>
        <picklist>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>What_gives_you_concerns_about_this_hire__c</fullName>
        <label>What gives you concerns about this hire?</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>What_is_the_best_reason_to_hire_them__c</fullName>
        <label>What is the best reason to hire them?</label>
        <type>TextArea</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Interviewer Feedback</label><nameField>
        <displayFormat>Feedback-{0000}</displayFormat>
        <label>Interviewer Feedback Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Interviewer Feedbacks</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith></CustomObject>